# internal/api/gen/http/openapi.yaml
@@ -468,24 +468,24 @@ paths:
     post:
       tags:
       - eark
-      summary: create_dips eark
+      summary: gen_eark_dips eark
       description: Submit a new E-Ark DIP Workflow
-      operationId: eark#create_dips
+      operationId: eark#gen_eark_dips
       responses:
         "202":
           description: Accepted response.
           schema:
-            $ref: '#/definitions/EarkCreateDipsResponseBody'
+            $ref: '#/definitions/EarkGenEarkDipsResponseBody'
             required:
             - success
         "400":
           description: Bad Request response.
           schema:
-            $ref: '#/definitions/EarkCreateDipsNotValidResponseBody'
+            $ref: '#/definitions/EarkGenEarkDipsNotValidResponseBody'
         "409":
           description: Conflict response.
           schema:
-            $ref: '#/definitions/EarkCreateDipsNotAvailableResponseBody'
+            $ref: '#/definitions/EarkGenEarkDipsNotAvailableResponseBody'
       schemes:
       - http
   /pipeline:
@@ -1443,115 +1443,6 @@ definitions:
       workflow_id: Reiciendis est ad ipsa omnis eius.
     required:
     - running
-  EarkCreateDipsNotAvailableResponseBody:
-    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-    type: object
-    properties:
-      fault:
-        type: boolean
-        description: Is the error a server-side fault?
-        example: false
-      id:
-        type: string
-        description: ID is a unique identifier for this particular occurrence of the
-          problem.
-        example: 123abc
-      message:
-        type: string
-        description: Message is a human-readable explanation specific to this occurrence
-          of the problem.
-        example: parameter 'p' must be an integer
-      name:
-        type: string
-        description: Name is the name of this class of errors.
-        example: bad_request
-      temporary:
-        type: boolean
-        description: Is the error temporary?
-        example: true
-      timeout:
-        type: boolean
-        description: Is the error a timeout?
-        example: false
-    description: create_dips_not_available_response_body result type (default view)
-    example:
-      fault: false
-      id: 123abc
-      message: parameter 'p' must be an integer
-      name: bad_request
-      temporary: true
-      timeout: false
-    required:
-    - name
-    - id
-    - message
-    - temporary
-    - timeout
-    - fault
-  EarkCreateDipsNotValidResponseBody:
-    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-    type: object
-    properties:
-      fault:
-        type: boolean
-        description: Is the error a server-side fault?
-        example: true
-      id:
-        type: string
-        description: ID is a unique identifier for this particular occurrence of the
-          problem.
-        example: 123abc
-      message:
-        type: string
-        description: Message is a human-readable explanation specific to this occurrence
-          of the problem.
-        example: parameter 'p' must be an integer
-      name:
-        type: string
-        description: Name is the name of this class of errors.
-        example: bad_request
-      temporary:
-        type: boolean
-        description: Is the error temporary?
-        example: true
-      timeout:
-        type: boolean
-        description: Is the error a timeout?
-        example: false
-    description: create_dips_not_valid_response_body result type (default view)
-    example:
-      fault: true
-      id: 123abc
-      message: parameter 'p' must be an integer
-      name: bad_request
-      temporary: true
-      timeout: false
-    required:
-    - name
-    - id
-    - message
-    - temporary
-    - timeout
-    - fault
-  EarkCreateDipsResponseBody:
-    title: EarkCreateDipsResponseBody
-    type: object
-    properties:
-      aip_name:
-        type: string
-        example: Magni consequuntur.
-      dip_name:
-        type: string
-        example: Voluptas suscipit quos hic quos.
-      success:
-        type: boolean
-        example: false
-    example:
-      aip_name: Quo tempora enim possimus.
-      dip_name: Possimus in facere dolorum numquam sit.
-      success: true
-    required:
-    - success
   EarkDipGenStatusResponseBody:
     title: EarkDipGenStatusResponseBody
     type: object
@@ -1681,6 +1572,115 @@ definitions:
     required:
     - workflow_id
     - run_id
+  EarkGenEarkDipsNotAvailableResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: gen_eark_dips_not_available_response_body result type (default view)
+    example:
+      fault: false
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: true
+      timeout: false
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  EarkGenEarkDipsNotValidResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: true
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: gen_eark_dips_not_valid_response_body result type (default view)
+    example:
+      fault: true
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: true
+      timeout: false
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  EarkGenEarkDipsResponseBody:
+    title: EarkGenEarkDipsResponseBody
+    type: object
+    properties:
+      aip_name:
+        type: string
+        example: Magni consequuntur.
+      dip_name:
+        type: string
+        example: Voluptas suscipit quos hic quos.
+      success:
+        type: boolean
+        example: false
+    example:
+      aip_name: Quo tempora enim possimus.
+      dip_name: Possimus in facere dolorum numquam sit.
+      success: true
+    required:
+    - success
   EnduroCollectionWorkflowHistoryResponseBody:
     title: 'Mediatype identifier: application/vnd.enduro.collection-workflow-history;
       view=default'
